# jni-lab

./: .gitignore  readme.md
cpp/: CMakeLists.txt  CpuInfo.cpp  nsu_fit_CpuInfo.h
src/nsu/fit/: CpuInfo.java  Main.java
